# iron-burrow-mother-api-rs

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CONTRACTS.md  Cargo.toml  DOCS.md  Dockerfile  HISTORY.md  Makefile  README.md  compose.prod.yaml  compose.yaml
.agents/skills/: spec-review-ready
.github/workflows/: ci.yaml  publish-image.yaml
docs/: smoke-tests.md
docs/archive/: SPEC-004-dis-polymarket-prediction-routes.md
docs/rfcs/: RFC-001 - Consumer Access Model.md  RFC-002 - Read Model Asset Sync.md
docs/runbooks/: deploy.md  operator.md  private-beta-api-quickstart.md  smoke-tests.md
docs/specs/: SPEC-001-dis-aave-v3-realized-yield.md  SPEC-002-asset-detail-enrichment.md  SPEC-002-price-signals-integration.md  SPEC-003-price-signal-endpoints.md  SPEC-004-dis-polymarket-prediction-routes.md  SPEC-005-aave-v3-portfolio-estimate.md  SPEC-006-network-scoped-balances-v1.md  SPEC-007-public-erc-20-transfer-search-v1.md  SPEC-007-reference-data-and-migration-lifecycle.md  SPEC-008-balance-endpoint-beta-contract-hardening.md  SPEC-008-reference-data-and-migration-lifecycle.md  SPEC-008.md  SPEC-009-reference-data-and-migration-lifecycle.md  SPEC-009.md  SPEC-010-beta-api-key-access-service.md  SPEC-010-reference-data-and-migration-lifecycle.md  SPEC-010.md  SPEC-011-public-api-beta-v0-2-surface-v1.md  SPEC-011.md  SPEC-012-balance-endpoint-v0-3-explicit-token-selectors-and-historical-balances.md  SPEC-012-balance-endpoint-v2-explicit-token-selectors-and-historical-balances.md
infra/caddy/: Caddyfile
infra/docker/: Dockerfile.mother-api  Dockerfile.mother-api-db-migrate
migrations/: 0001_mother_api_global_assets.sql  0002_seed_demo_global_assets.sql  0003_global_asset_slug_unique.sql  0004_mother_api_metering_foundation.sql  0004_seed_mxnb_global_asset.sql  0005_canonical_evm_network_slugs.sql  0006_reference_data_identity_constraints.sql  0007_api_key_adoption.sql  0008_api_key_policy_usage.sql
reference-data/: catalog.json
scripts/: backup_now.sh  create_docker_networks.sh
scripts/smoke/: beta-auth.sh  db-lifecycle.sh  db-migrate.sh
scripts/test/: db-postgres.sh
src/: app.rs  cli.rs  config.rs  db.rs  db_lifecycle.rs  erc20_transfers.rs  error.rs  main.rs  openapi.rs  reference_data.rs  state.rs
src/adapters/: global_assets.rs  mod.rs
src/admin/: mod.rs
src/application/: mod.rs
src/assets/: service.rs
src/balances/: bigwig.rs  catalog.rs  decimal.rs  mod.rs  quote.rs  response.rs  service.rs
src/common/: mod.rs  rfc3339.rs  time.rs
src/config/: constants.rs  env.rs  error.rs  mod.rs  tests.rs
src/dis/: client.rs  mod.rs
src/domain/: accounts.rs  api_keys.rs  asset_chain_map.rs  asset_match.rs  balance_catalog.rs  global_assets.rs  mod.rs  networks.rs  onchain_window.rs  validation.rs
src/infra/: db.rs  mod.rs  server.rs  telemetry.rs
(+133 files in other folders)
