[package]
name = "iron-burrow-mother-api-rs"
version = "0.1.1"
edition = "2021"
rust-version = "1.95"
license = "UNLICENSED"
publish = false

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "json",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
